@@ -14,7 +14,7 @@
 	**/
 	final class HttpUrl extends Url
 	{
-		protected $knownSubSchemes	= array();
+		protected static $knownSubSchemes	= array();
 		
 		/**
 		 * @return HttpUrl
